# rust-practice

./: LICENSE  README.md
.github/workflows/: rust_test.yml
calr/: Cargo.toml
calr/src/: lib.rs  main.rs
calr/tests/: cli.rs
catr/: Cargo.toml  README.md
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
commr/: Cargo.toml
commr/src/: lib.rs
commr/tests/: cli.rs
cutr/: Cargo.toml
cutr/src/: lib.rs  main.rs
echor/: Cargo.toml  mk-outs.sh
echor/src/: main.rs
echor/tests/: cli.rs  mk-outs.sh
findr/: Cargo.toml  README.md
findr/src/: lib.rs  main.rs
findr/tests/: cli.rs
fortuner/: Cargo.toml
fortuner/src/: lib.rs  main.rs
grepr/: Cargo.toml
grepr/src/: lib.rs  main.rs
grepr/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
headr/tests/: cli.rs
hello/tests/: cli.rs
lsr/: Cargo.toml
lsr/src/: lib.rs  owner.rs
lsr/tests/: cli.rs
tailr/: Cargo.toml
tailr/src/: lib.rs  main.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs
uniqr/tests/: cli.rs
uniqr/tests/expected/: only_space.c.out
uniqr/tests/inputs/: only_space.txt
wcr/: Cargo.toml
wcr/src/: lib.rs  main.rs
