[package]
name = "calr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
chrono = "0.4"
itertools = "0.12"
ansi_term = "0.12"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
