[package]
name = "commr"
version = "0.1.0"
edition = "2021"
authors = ["ose20"]
description = "Rust version of something like comm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"