[package]
name = "findr"
version = "0.1.0"
edition = "2021"
authors = ["ose20 <ose20dive@gmail.com>"]
description = "Rust version of something like `find`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"