[package]
name = "lsr"
version = "0.1.0"
edition = "2021"
authors = ["ose20"]
description = "Rust version of something like `ls` command"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
tabular = "0.2.0"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
