[package]
name = "tailr"
version = "0.1.0"
edition = "2021"
authors = ["ose20"]
description = "Rust version of something like tail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
num = "0.4"
regex = "1"
once_cell = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"